margin issue solved

--- a/profileSetting.html
+++ b/profileSetting.html
@@ -80,7 +80,7 @@
   
     <!--Main layout-->
     <main>
-        <section class="user-profile">
+        <section class="user-profile profile-setting">
             <div class="container">
                 <div class="profile-wrap">
                     <div class="user-setting">
