--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       
       <div class="container">
         
-        <div class=" " >
+        <div >
           <ul class="d-flex justify-content-between" >
             <li class="nav-item text-center">
               <a class="nav-link nav-link-sm  active" aria-current="page" href="index.html"><i class="fa-solid fa-house"></i></a>
