Holiday packages list page design done!

--- a/flights.html
+++ b/flights.html
@@ -24,7 +24,11 @@
 
             --box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 
+            }
 
+            input:focus{
+                outline: none !important;
+                box-shadow: none !important;
             }
     </style>
 
@@ -114,7 +118,7 @@
         }
 
         /* price-range start*/
-        .price-range, .search-property h5{
+        .price-range h5, .search-property h5{
             font-size: 14px;
         }
         .search-property input{
@@ -918,7 +922,7 @@
                         </div>
 
                         <!-- flights list card start  -->
-                        <div class="flight-ticket-wrap mt-3 mt-md-4 shadow-sm rounded">
+                        <div class="flight-ticket-wrap mt-2 mt-md-3 shadow-sm rounded">
                             <div class="ticket-body">
 
                                 <div class=" card border-0 " >
@@ -1087,7 +1091,7 @@
 
 
                         <!-- flights list card start  -->
-                        <div class="flight-ticket-wrap mt-3 mt-md-4 shadow-sm rounded">
+                        <div class="flight-ticket-wrap mt-2 mt-md-3 shadow-sm rounded">
                             <div class="ticket-body">
 
                                 <div class=" card border-0 " >
@@ -1246,7 +1250,7 @@
 
                         </div>
                         <!-- flights list card start  -->
-                        <div class="flight-ticket-wrap mt-3 mt-md-4 shadow-sm rounded">
+                        <div class="flight-ticket-wrap mt-2 mt-md-3 shadow-sm rounded">
                             <div class="ticket-body">
 
                                 <div class=" card border-0 " >
@@ -1405,7 +1409,7 @@
 
                         </div>
                         <!-- flights list card start  -->
-                        <div class="flight-ticket-wrap mt-3 mt-md-4 shadow-sm rounded">
+                        <div class="flight-ticket-wrap mt-2 mt-md-3 shadow-sm rounded">
                             <div class="ticket-body">
 
                                 <div class=" card border-0 " >
@@ -1565,7 +1569,7 @@
                         </div>
 
                         <!-- flights list card start  -->
-                        <div class="flight-ticket-wrap mt-3 mt-md-4 shadow-sm rounded">
+                        <div class="flight-ticket-wrap mt-2 mt-md-3 shadow-sm rounded">
                             <div class="ticket-body">
 
                                 <div class=" card border-0 " >
