--- a/pricing.html
+++ b/pricing.html
@@ -171,7 +171,7 @@
   <main> 
     <section style="margin-top: 5rem; padding: 4rem 0; background-color: #f4f4f4;">
       <div class="container">
-        <div class="pricing-title" style="">
+        <div class="pricing-title" >
           <h3>Pricing Table</h3>
         </div>
       </div>
@@ -431,69 +431,9 @@
     <script type="text/javascript" src="js/slick.min.js"></script>
 
 
-    <script>
-      $('.top-ctg-card').slick({
-        infinite: true,
-    slidesToShow: 6,
-    centerPadding: '20px',
-    slidesToScroll: 1,
-    autoplay: true,
-    autoplaySpeed: 2000,
-    responsive: [
-    {
-      breakpoint: 1024,
-      settings: {
-        slidesToShow: 5,
-        slidesToScroll: 1,
-        centerPadding: '20px',
-        infinite: true,
-        dots: true
-      }
-    },
-    {
-      breakpoint: 600,
-      settings: {
-        slidesToShow: 1,
-        slidesToScroll: 1
-      }
-    },
-    {
-      breakpoint: 576,
-      settings: {
-        slidesToShow: 2,
-        slidesToScroll: 1
-      }
-    },
-    {
-      breakpoint: 768,
-      settings: {
-        slidesToShow: 3,
-        slidesToScroll: 1
-      }
-    },
-    {
-      breakpoint: 992,
-      settings: {
-        slidesToShow: 4,
-        slidesToScroll: 1
-      }
-    },
-    {
-      breakpoint: 1200,
-      settings: {
-        slidesToShow: 5,
-        slidesToScroll: 1
-      }
-    }
     
-    // You can unslick at a given breakpoint now by adding:
-    // settings: "unslick"
-    // instead of a settings object
-  ]
-      });
-    </script>
 
-    <script>
+    <!-- <script>
       $('.testimonial-card').slick({
         infinite: true,
     slidesToShow: 2,
@@ -548,7 +488,7 @@
     // instead of a settings object
     ]
       });
-    </script>
+    </script> -->
 
     
 </body>
