hotel booking and profile some update!

--- a/hotel_book.html
+++ b/hotel_book.html
@@ -716,11 +716,9 @@
                                         <div class="input-group position-relative" style="margin-top: 10px;">
                                             <button class="btn  dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">+880</button>
                                             <ul class="dropdown-menu">
-                                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                                <li><hr class="dropdown-divider"></li>
-                                                <li><a class="dropdown-item" href="#">Separated link</a></li>
+                                                <li><a class="dropdown-item" >+91</a></li>
+                                                <li><a class="dropdown-item" >+61</a></li>
+                                                <li><a class="dropdown-item" >+90</a></li>
                                             </ul>
                                             <input type="text" class="form-control " placeholder="Mobile Number" aria-label="Text input with dropdown button" required>
                                             <label for="gphone" class="form-label position-absolute">Mobile</label>
