--- a/hotel_profile.html
+++ b/hotel_profile.html
@@ -2185,7 +2185,7 @@
                         <!-- reviews end  -->
 
                         <!-- nearby start  -->
-                        <div class="tab-pane nearby mb-3 mb-lg-5 fade p-4 rounded" id="nearby" role="tabpanel" aria-labelledby="nearby-tab" tabindex="0" >nearby...............
+                        <div class="tab-pane nearby mb-3 mb-lg-5 fade p-4 rounded" id="nearby" role="tabpanel" aria-labelledby="nearby-tab" tabindex="0" >
                             <div class="row">
                                 <div class="col">
                                     <div class="ratio ratio-16x9">
